feat:lintの強化などなど

--- a/src/views/home/template.pug
+++ b/src/views/home/template.pug
@@ -1,3 +1,6 @@
 .home
   img(alt="Vue logo" src="../../assets/logo.png")
   .title {{ title }}
+  JsComponent
+  VueExtend(:val="propValue", :obj="propObj")
+  PropertyDecorator(:val="propValue", :obj="propObj")
